--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.8.2",
     "redux-logger": "^3.0.6",
     "socket.io-client": "^4.6.1",
+    "vite-plugin-svgr": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
