--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "notistack": "^3.0.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
